--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,7 +15,7 @@
     </php>
 
     <testsuite name="Google Analytics Extractor Test Suite">
-        <directory>tests/Keboola</directory>
+        <directory>tests</directory>
     </testsuite>
 
     <filter>
