refactor: use new Sheets API

--- a/tests/data/config.yml
+++ b/tests/data/config.yml
@@ -3,21 +3,9 @@ parameters:
   sheets:
     -
       id: 0
-      fileId: 1tep21r8fDJyXJyMAo2KKqBrxaEmqoJuwnQB4Y6gqGBU
-      fileTitle: "SK Sales rep monthly targets"
-      sheetId: 10
-      sheetTitle: "CM Targets"
-      outputTable: "in.c-google-drive-extractor-testcfg1.nieco-10"
+      fileId:
+      fileTitle:
+      sheetId:
+      sheetTitle:
+      outputTable:
       enabled: true
-      header:
-        rows: 2
-        columns:
-          - "City Manager"
-          - "Team"
-        transpose:
-          row: 1
-          name: month
-      transform:
-        transpose:
-          from: 3
-
