--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
   "require-dev": {
     "phpunit/phpunit": "^5.3",
     "squizlabs/php_codesniffer": "^2.6",
-    "codeclimate/php-test-reporter": "^0.3",
-    "keboola/php-encryption": "~0.2"
+    "codeclimate/php-test-reporter": "^0.3"
   },
   "autoload": {
     "psr-4": {
