feat (travis): build and deploy to quay

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,10 @@ script:
   - ./vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php .
   - ./vendor/bin/phpunit
   - ./vendor/bin/test-reporter
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: ./deploy.sh
+  on:
+    tags: true
