--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,25 @@
 sudo: required
 
-language: php
+language: bash
 
 services:
   - docker
 
-php:
-- '5.6'
-
-before_script:
-  - composer self-update
-  - composer install --dev
+install:
+  - docker-compose run --rm app composer install -n
+  - docker-compose build app
 
 script:
-  - ./vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php .
-  - ./vendor/bin/phpunit
-  - ./vendor/bin/test-reporter
+  - docker-compose run --rm app
 
 after_success:
-  - docker build -t google-drive-extractor .
   - docker images
+
+after_error:
+  - docker-compose logs
+
+after_failure:
+  - docker-compose logs
 
 deploy:
   provider: script
