--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         bootstrap="bootstrap.php">
-
-    <testsuite name="Google Drive Extractor Test Suite">
-        <directory>tests</directory>
-    </testsuite>
-
-    <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./src/Keboola/GoogleDriveExtractor</directory>
-        </whitelist>
-    </filter>
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        backupGlobals="false"
+        backupStaticAttributes="false"
+        colors="true"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        processIsolation="false"
+        bootstrap="bootstrap.php"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+>
+  <coverage processUncoveredFiles="true">
+    <include>
+      <directory suffix=".php">./src/Keboola/GoogleDriveExtractor</directory>
+    </include>
+  </coverage>
+  <testsuite name="Google Drive Extractor Test Suite">
+    <directory>tests</directory>
+  </testsuite>
 </phpunit>
