--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   },
   "require-dev": {
     "keboola/coding-standard": ">=7.0.2",
+    "keboola/datadir-tests": "^5.2",
     "php-parallel-lint/php-parallel-lint": "^1.2",
     "phpstan/phpstan": "^0.12.64",
     "phpunit/phpunit": "^9.5"
@@ -30,13 +31,16 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Keboola\\GoogleDriveExtractor\\Tests\\": "tests/phpunit/"
+      "Keboola\\GoogleDriveExtractor\\Tests\\": "tests/phpunit/",
+      "Keboola\\GoogleDriveExtractor\\FunctionalTests\\": "tests/functional/"
     }
   },
   "scripts": {
     "tests-phpunit": "phpunit",
+    "tests-datadir": "phpunit tests/functional",
     "tests": [
-      "@tests-phpunit"
+      "@tests-phpunit",
+      "@tests-datadir"
     ],
 
     "phpstan": "phpstan analyse ./src ./tests --level=max --no-progress -c phpstan.neon",
